fix mobile spacing, refactor color shift code + address scroll issue

--- a/style.css
+++ b/style.css
@@ -9,8 +9,15 @@
 html{
   -webkit-scroll-behavior: smooth ;
   scroll-behavior: smooth ;
-  /* overflow-x: hidden; */
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(168,168,214,0.19380594034488796) 35%, rgba(0,212,255,1) 100%);
+  /* background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(168,168,214,0.19380594034488796) 35%, rgba(0,212,255,1) 100%); */
+
+  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(168,168,214,1) 35%, rgba(0,212,255,0.1) 100%);
+
+  /* background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,0.29184515603116246) 100%); */
+
+  /* background: radial-gradient(circle, rgba(2,0,36,0.6699964165353641) 0%, rgba(168,168,214,0.75) 50%, rgba(252,176,69,0.5383437554709384) 100%); */
+
+
 }
 
 :root {
@@ -24,7 +31,7 @@ html{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  --main-color: #53f2b5;
+  --main-color: rgba(63,94,251,1);
   --darken-color: rgba(0, 0, 0, 0.35);
   --dark-text-color: rgb(0, 41, 41);
   --light-text-color: rgba(255, 255, 255, 0.87);
@@ -37,12 +44,6 @@ html{
 
 #name{
   color: var(--darken-color)
-}
-
-#hero-section{
- 
-
-
 }
 
 section{
@@ -116,7 +117,6 @@ body {
   min-height: 100vh;
   color: var(--dark-text-color);
   transition: background-color 300ms linear;
-  overflow: hidden
 }
 
 
@@ -414,6 +414,13 @@ p{
   .section-heading{
     margin-bottom: var(--padding-s);
   }
+  
+  #icon-container{
+    margin: auto;
+  }
 
+  #contact-section > h2 {
+    margin-top: auto;
+  }
 
 }
